Ensure tooltips are visible within revision history tables (#2626)

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -384,6 +384,12 @@
   // REVISIONS LIST
 
   .p-revisions-list {
+
+    td,
+    th {
+      overflow: visible;
+    }
+
     .col-checkbox-spacer {
       padding-left: 2rem;
     }
